--- a/wifi-unredactor.app/Contents/Info.plist
+++ b/wifi-unredactor.app/Contents/Info.plist
@@ -14,6 +14,7 @@
     <string>This app requires access to your location to retrieve Wi-Fi information.</string>
     <key>NSPrincipalClass</key>
     <string>NSApplication</string>
+    <key>LSUIElement</key>
+    <true/>
 </dict>
 </plist>
-
